# cratesio-mcp

./: .mcp.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  cliff.toml  fly.toml
.github/workflows/: ci.yml  deploy.yml  release.yml
src/: lib.rs  main.rs  state.rs
src/client/: categories.rs  changelog.rs  crates.rs  docsrs.rs  error.rs  keywords.rs  metadata.rs  mod.rs  osv.rs  owners.rs  publish.rs  query.rs  teams.rs  tests.rs  tokens.rs  trusted.rs  types.rs  users.rs  versions.rs  wire.rs
src/docs/: cache.rs  format.rs  mod.rs
src/prompts/: evaluate_dependencies.rs  migration_guide.rs  mod.rs  recommend.rs  stack_review.rs
src/resources/: crate_info.rs  docs.rs  mod.rs  readme.rs
src/tools/: alternatives.rs  audit.rs  authors.rs  categories.rs  category.rs  changelog.rs  compare.rs  crate_docs.rs  dependencies.rs  dependency_tree.rs  doc_item.rs  downloads.rs  features.rs  get_doc_item.rs  health_check.rs  info.rs  keyword_detail.rs  keywords.rs  mod.rs  owners.rs  readme.rs  reverse_deps.rs  search.rs  search_docs.rs  summary.rs  user.rs  user_stats.rs  version_detail.rs  version_downloads.rs  versions.rs
tests/: mcp_integration.rs
